<resources>
    <string name="app_name">DSMP#</string>
    <string name="full_name">Full Name</string>
    <string name="Email" />
    <string name="Password" />
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="mobile_no">Mobile No</string>
    <string name="register">Register</string>
    <string name="student">student</string>
    <string name="teacher">Teacher</string>
    <string name="go_to_login">Go To LogIn</string>
    <string name="teacher2">Teacher</string>
    <string name="student2">Student</string>
    <string name="cal_image">cal Image</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login1">LOGIN</string>
</resources>