<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange"
    tools:context=".Register">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="355dp"
        android:layout_height="593dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="107dp"
        android:layout_marginEnd="29dp"
        android:layout_marginBottom="264dp"
        android:background="@drawable/rectangle_2"
        android:elevation="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/registerBtn"
            android:layout_width="210dp"
            android:layout_height="60dp"
            android:layout_marginStart="72dp"
            android:layout_marginTop="440dp"
            android:layout_marginEnd="73dp"
            android:layout_marginBottom="93dp"
            android:backgroundTint="@color/orange"
            android:text="@string/register"
            android:textColor="@color/black"
            android:textSize="18dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/loginBtnRg"
            android:layout_width="210dp"
            android:layout_height="60dp"
            android:layout_marginStart="72dp"
            android:layout_marginTop="500dp"
            android:layout_marginEnd="73dp"
            android:layout_marginBottom="33dp"
            android:backgroundTint="@color/orange"

            android:text="@string/go_to_login"
            android:textColor="@color/black"
            android:textSize="18dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            android:id="@+id/TeacherBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/teacher2"
            app:layout_constraintBottom_toBottomOf="@+id/studentBox"
            app:layout_constraintEnd_toStartOf="@+id/studentBox"
            app:layout_constraintHorizontal_bias="0.603"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/studentBox"
            app:layout_constraintVertical_bias="0.0" />

        <CheckBox
            android:id="@+id/studentBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="203dp"
            android:layout_marginTop="376dp"
            android:layout_marginEnd="72dp"
            android:layout_marginBottom="169dp"
            android:text="@string/student2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/mobileNoIpt"
            android:layout_width="280dp"
            android:layout_height="55dp"
            android:layout_marginStart="37dp"
            android:layout_marginEnd="38dp"
            android:layout_marginBottom="269dp"
            android:autofillHints="phone"
            android:background="@drawable/rectangle_5"
            android:hint="@string/mobile_no"
            android:inputType="phone"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordIpt"
            app:layout_constraintVertical_bias="1.0" />

        <EditText
            android:id="@+id/passwordIpt"
            android:layout_width="280dp"
            android:layout_height="55dp"
            android:layout_marginBottom="331dp"
            android:autofillHints="password"
            android:background="@drawable/rectangle_5"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailIpt"
            app:layout_constraintVertical_bias="0.777" />

        <EditText
            android:id="@+id/emailIpt"
            android:layout_width="280dp"
            android:layout_height="55dp"
            android:layout_marginBottom="395dp"
            android:autofillHints="emailAddress"
            android:background="@drawable/rectangle_5"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fullNameIpt"
            app:layout_constraintVertical_bias="0.666" />

        <EditText
            android:id="@+id/fullNameIpt"
            android:layout_width="280dp"
            android:layout_height="55dp"
            android:layout_marginTop="76dp"
            android:layout_marginBottom="462dp"
            android:autofillHints="Full Name"
            android:background="@drawable/rectangle_5"
            android:hint="@string/full_name"
            android:inputType="text"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="REGISTER"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/fullNameIpt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.636" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>


